ajout etudiantPromo